--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comforter&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comforter&family=Poppins:wght@400;600;700&display=swap"
+        rel="stylesheet">
     <!-- custom css -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -30,7 +31,7 @@
                 <a href="/" class="btn">get started</a>
             </div>
         </div><!-- /.container -->
-    </header>  
+    </header>
     <!-- header part end  ​ -->
 
     <section id="home">
@@ -40,7 +41,8 @@
                     <div class="content">
                         <h3>Hi I am</h3>
                         <h1>Jesmin Juthi</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum corrupti sunt ullam sed sit consectetur a voluptas labore id fugit.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum corrupti sunt ullam sed
+                            sit consectetur a voluptas labore id fugit.</p>
                         <a href="/">See Details <i class="fas fa-long-arrow-alt-right arw"></i> </a>
                         <div class="btns-area">
                             <a href="https://facebook.com/jesmin.juthi.54"><i class="fab fa-facebook-f"></i></a>
@@ -64,17 +66,20 @@
                 <div class="single-box">
                     <i class="fas fa-award"></i>
                     <h3>Awarded Design</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus modi. Ad.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
+                        modi. Ad.</p>
                 </div><!-- /.single-box -->
                 <div class="single-box">
                     <i class="fas fa-medal"></i>
                     <h3>Awarded Design</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus modi. Ad.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
+                        modi. Ad.</p>
                 </div><!-- /.single-box -->
                 <div class="single-box">
                     <i class="fas fa-biohazard"></i>
                     <h3>Awarded Design</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus modi. Ad.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
+                        modi. Ad.</p>
                 </div><!-- /.single-box -->
             </div><!-- /.info-box -->
         </div><!-- /.container -->
@@ -91,13 +96,67 @@
                         <h3>About us</h3>
                         <div class="line"></div><!-- /.line -->
                         <h2>Some details about our team and work</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi qui voluptate, eum dolore, ab a laboriosam eaque error doloribus vitae ea recusandae suscipit molestiae distinctio dicta ad molestias doloremque corrupti.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi qui voluptate, eum dolore, ab
+                            a laboriosam eaque error doloribus vitae ea recusandae suscipit molestiae distinctio dicta
+                            ad molestias doloremque corrupti.</p>
                         <a href="#" class="btn">Read More</a>
                     </div><!-- /.content -->
                 </div><!-- /.half -->
             </div><!-- /.content-box -->
         </div><!-- /.container -->
     </section><!-- /#about -->
+
+    <section id="services">
+        <div class="container">
+            <div class="service-content">
+                <h3>our services</h1>
+                    <div class="line"></div><!-- /.line -->
+                    <h2>what we do for our customers</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea fugiat ad repellat nobis ex, unde
+                        impedit, repellendus beatae.</p>
+            </div><!-- /.service-content -->
+
+            <div class="info-box">
+                <div class="single-box">
+                    <i class="fas fa-laptop-code"></i>
+                    <h3>Awarded Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
+                        modi. Ad.</p>
+                </div><!-- /.single-box -->
+                <div class="single-box">
+                    <i class="fas fa-laptop"></i>
+                    <h3>Awarded Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
+                        modi. Ad.</p>
+                </div><!-- /.single-box -->
+                <div class="single-box">
+                    <i class="fas fa-award"></i>
+                    <h3>Awarded Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
+                        modi. Ad.</p>
+                </div><!-- /.single-box -->
+                <div class="single-box">
+                    <i class="fas fa-laptop-code"></i>
+                    <h3>Awarded Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
+                        modi. Ad.</p>
+                </div><!-- /.single-box -->
+                <div class="single-box">
+                    <i class="fas fa-laptop"></i>
+                    <h3>Awarded Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
+                        modi. Ad.</p>
+                </div><!-- /.single-box -->
+                <div class="single-box">
+                    <i class="fas fa-award"></i>
+                    <h3>Awarded Design</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
+                        modi. Ad.</p>
+                </div><!-- /.single-box -->
+            </div><!-- /.info-box -->
+
+        </div><!-- /.container -->
+    </section><!-- /#services -->
 
 </body>
 
