--- a/index.html
+++ b/index.html
@@ -1,163 +1,300 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- font awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+    />
     <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Comforter&family=Poppins:wght@400;600;700&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comforter&family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <!-- custom css -->
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     ​
     <!-- header part start  ​ -->
     <header>
-        <div class="container-fluid">
-            <div class="navbar">
-                <a href="/" class="logo">Jesmin Juthi</a>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">services</a></li>
-                    <li><a href="#skills">skills</a></li>
-                    <li><a href="#contact">contact</a></li>
-                </ul>
-                <a href="/" class="btn">get started</a>
-            </div>
-        </div><!-- /.container -->
+      <div class="container-fluid">
+        <div class="navbar">
+          <a href="/" class="logo">Jesmin Juthi</a>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">services</a></li>
+            <li><a href="#skills">skills</a></li>
+            <li><a href="#contact">contact</a></li>
+          </ul>
+          <a href="/" class="btn">get started</a>
+        </div>
+      </div>
+      <!-- /.container -->
     </header>
     <!-- header part end  ​ -->
 
     <section id="home">
-        <div class="container">
-            <div class="content-box">
-                <div class="half">
-                    <div class="content">
-                        <h3>Hi I am</h3>
-                        <h1>Jesmin Juthi</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum corrupti sunt ullam sed
-                            sit consectetur a voluptas labore id fugit.</p>
-                        <a href="/">See Details <i class="fas fa-long-arrow-alt-right arw"></i> </a>
-                        <div class="btns-area">
-                            <a href="https://facebook.com/jesmin.juthi.54"><i class="fab fa-facebook-f"></i></a>
-                            <a href=""><i class="fab fa-twitter"></i></a>
-                            <a href=""><i class="fab fa-instagram"></i></a>
-                        </div><!-- /.btns-area -->
-                    </div><!-- /.content -->
-                </div><!-- /.half -->
-                <div class="half">
-                    <div class="content-img">
-                        <img src="images/1.jpg" alt="">
-                    </div><!-- /.content -->
-                </div><!-- /.half -->
-            </div><!-- /.content-box -->
-        </div><!-- /.container -->
-    </section><!-- /#home -->
+      <div class="container">
+        <div class="content-box">
+          <div class="half">
+            <div class="content">
+              <h3>Hi I am</h3>
+              <h1>Jesmin Juthi</h1>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatum corrupti sunt ullam sed sit consectetur a voluptas
+                labore id fugit.
+              </p>
+              <a href="/">
+                See Details
+                <i class="fas fa-long-arrow-alt-right arw"></i>
+              </a>
+              <div class="btns-area">
+                <a href="https://facebook.com/jesmin.juthi.54">
+                  <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+              </div>
+              <!-- /.btns-area -->
+            </div>
+            <!-- /.content -->
+          </div>
+          <!-- /.half -->
+          <div class="half">
+            <div class="content-img">
+              <img src="images/1.jpg" alt="" />
+            </div>
+            <!-- /.content -->
+          </div>
+          <!-- /.half -->
+        </div>
+        <!-- /.content-box -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /#home -->
 
     <section class="info">
-        <div class="container">
-            <div class="info-box">
-                <div class="single-box">
-                    <i class="fas fa-award"></i>
-                    <h3>Awarded Design</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
-                        modi. Ad.</p>
-                </div><!-- /.single-box -->
-                <div class="single-box">
-                    <i class="fas fa-medal"></i>
-                    <h3>Awarded Design</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
-                        modi. Ad.</p>
-                </div><!-- /.single-box -->
-                <div class="single-box">
-                    <i class="fas fa-biohazard"></i>
-                    <h3>Awarded Design</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
-                        modi. Ad.</p>
-                </div><!-- /.single-box -->
-            </div><!-- /.info-box -->
-        </div><!-- /.container -->
-    </section><!-- /.info -->
+      <div class="container">
+        <div class="info-box">
+          <div class="single-box">
+            <i class="fas fa-award"></i>
+            <h3>Awarded Design</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+              fugit numquam voluptates natus modi. Ad.
+            </p>
+          </div>
+          <!-- /.single-box -->
+          <div class="single-box">
+            <i class="fas fa-medal"></i>
+            <h3>Awarded Design</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+              fugit numquam voluptates natus modi. Ad.
+            </p>
+          </div>
+          <!-- /.single-box -->
+          <div class="single-box">
+            <i class="fas fa-biohazard"></i>
+            <h3>Awarded Design</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+              fugit numquam voluptates natus modi. Ad.
+            </p>
+          </div>
+          <!-- /.single-box -->
+        </div>
+        <!-- /.info-box -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.info -->
 
     <section id="about">
-        <div class="container">
-            <div class="content-box">
-                <div class="half">
-                    <img src="images/2.png" alt="">
-                </div><!-- /.half -->
-                <div class="half">
-                    <div class="content">
-                        <h3>About us</h3>
-                        <div class="line"></div><!-- /.line -->
-                        <h2>Some details about our team and work</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi qui voluptate, eum dolore, ab
-                            a laboriosam eaque error doloribus vitae ea recusandae suscipit molestiae distinctio dicta
-                            ad molestias doloremque corrupti.</p>
-                        <a href="#" class="btn">Read More</a>
-                    </div><!-- /.content -->
-                </div><!-- /.half -->
-            </div><!-- /.content-box -->
-        </div><!-- /.container -->
-    </section><!-- /#about -->
+      <div class="container">
+        <div class="content-box">
+          <div class="half">
+            <img src="images/2.png" alt="" />
+          </div>
+          <!-- /.half -->
+          <div class="half">
+            <div class="content">
+              <h3>About us</h3>
+              <div class="line"></div>
+              <!-- /.line -->
+              <h2>Some details about our team and work</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+                qui voluptate, eum dolore, ab a laboriosam eaque error doloribus
+                vitae ea recusandae suscipit molestiae distinctio dicta ad
+                molestias doloremque corrupti.
+              </p>
+              <a href="#" class="btn">Read More</a>
+            </div>
+            <!-- /.content -->
+          </div>
+          <!-- /.half -->
+        </div>
+        <!-- /.content-box -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /#about -->
 
     <section id="services">
-        <div class="container">
-            <div class="service-content">
-                <h3>our services</h3>
-                    <div class="line"></div><!-- /.line -->
-                    <h2>what we do for our customers</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea fugiat ad repellat nobis ex, unde
-                        impedit, repellendus beatae.</p>
-            </div><!-- /.service-content -->
+      <div class="container">
+        <div class="service-content">
+          <h3>our services</h3>
+          <div class="line"></div>
+          <!-- /.line -->
+          <h2>what we do for our customers</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea fugiat
+            ad repellat nobis ex, unde impedit, repellendus beatae.
+          </p>
+        </div>
+        <!-- /.service-content -->
 
-            <div class="info-box">
-                <div class="single-box">
-                    <i class="fas fa-laptop-code"></i>
-                    <h3>Awarded Design</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
-                        modi. Ad.</p>
-                </div><!-- /.single-box -->
-                <div class="single-box">
-                    <i class="fas fa-laptop"></i>
-                    <h3>Awarded Design</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
-                        modi. Ad.</p>
-                </div><!-- /.single-box -->
-                <div class="single-box">
-                    <i class="fas fa-award"></i>
-                    <h3>Awarded Design</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
-                        modi. Ad.</p>
-                </div><!-- /.single-box -->
-                <div class="single-box">
-                    <i class="fas fa-laptop-code"></i>
-                    <h3>Awarded Design</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
-                        modi. Ad.</p>
-                </div><!-- /.single-box -->
-                <div class="single-box">
-                    <i class="fas fa-laptop"></i>
-                    <h3>Awarded Design</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
-                        modi. Ad.</p>
-                </div><!-- /.single-box -->
-                <div class="single-box">
-                    <i class="fas fa-award"></i>
-                    <h3>Awarded Design</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugit numquam voluptates natus
-                        modi. Ad.</p>
-                </div><!-- /.single-box -->
-            </div><!-- /.info-box -->
+        <div class="info-box">
+          <div class="single-box">
+            <i class="fas fa-laptop-code"></i>
+            <h3>Awarded Design</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+              fugit numquam voluptates natus modi. Ad.
+            </p>
+          </div>
+          <!-- /.single-box -->
+          <div class="single-box">
+            <i class="fas fa-laptop"></i>
+            <h3>Awarded Design</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+              fugit numquam voluptates natus modi. Ad.
+            </p>
+          </div>
+          <!-- /.single-box -->
+          <div class="single-box">
+            <i class="fas fa-award"></i>
+            <h3>Awarded Design</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+              fugit numquam voluptates natus modi. Ad.
+            </p>
+          </div>
+          <!-- /.single-box -->
+          <div class="single-box">
+            <i class="fas fa-laptop-code"></i>
+            <h3>Awarded Design</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+              fugit numquam voluptates natus modi. Ad.
+            </p>
+          </div>
+          <!-- /.single-box -->
+          <div class="single-box">
+            <i class="fas fa-laptop"></i>
+            <h3>Awarded Design</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+              fugit numquam voluptates natus modi. Ad.
+            </p>
+          </div>
+          <!-- /.single-box -->
+          <div class="single-box">
+            <i class="fas fa-award"></i>
+            <h3>Awarded Design</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
+              fugit numquam voluptates natus modi. Ad.
+            </p>
+          </div>
+          <!-- /.single-box -->
+        </div>
+        <!-- /.info-box -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /#services -->
 
-        </div><!-- /.container -->
-    </section><!-- /#services -->
+    <section id="skills">
+      <div class="container">
+        <h3>My Complete Project</h3>
+        <div class="skill-content">
+          <div class="skill-1">
+            <img src="images/3.png" alt="" />
+          </div>
+          <div class="skill-2">
+            <img src="images/4.png" alt="" />
+          </div>
+          <div class="skill-3">
+            <img src="images/5.png" alt="" />
+          </div>
+          <div class="skill-4">
+            <img src="images/6.png" alt="" />
+          </div>
+          <div class="skill-5">
+            <img src="images/7.png" alt="" />
+          </div>
+          <div class="skill-6">
+            <img src="images/8.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
 
-</body>
+    <section id="contact">
+      <div class="container">
+        <h1>Contact Us</h1>
+        <div class="line"></div>
 
+        <div class="contact-form">
+          <form action="/action_page.php">
+            <label for="fname"></label>
+            <input
+              type="text"
+              id="fname"
+              name="fname"
+              placeholder="First Name"
+            />
+
+            <label for="lname"></label>
+            <input
+              type="text"
+              id="lname"
+              name="lname"
+              placeholder="Last Name"
+            />
+            <br />
+            <br />
+
+            <label for="email"></label>
+            <input type="text" id="email" name="email" placeholder="email" />
+            <br />
+            <br />
+
+            <textarea
+              id="textrea"
+              name="w3review"
+              rows="4"
+              cols="50"
+              placeholder="message"
+            ></textarea>
+            <br />
+            <br />
+
+            <input id="button" type="submit" value="Send" />
+          </form>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
